--- a/SignIn/package.json
+++ b/SignIn/package.json
@@ -12,7 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "amazon-cognito-identity-js": "^4.6.0",
+    "aws-sdk-mock": "^5.1.0",
     "axios": "^0.21.1",
-    "serverless-pseudo-parameters": "^2.5.0"
+    "axios-mock-adapter": "^1.19.0",
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2",
+    "nyc": "^15.1.0",
+    "proxyquire": "^2.1.3",
+    "serverless-pseudo-parameters": "^2.5.0",
+    "sinon": "^10.0.0"
   }
 }
