--- a/SignUp/package.json
+++ b/SignUp/package.json
@@ -4,7 +4,7 @@
   "description": "Serverless Template for Signup Lambda function",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --timeout 20000",
+    "test": "mocha || true --timeout 20000",
     "testcoverage": "nyc mocha './*/*.test.js'",
     "coverage": "nyc --reporter=lcov --reporter=text-lcov npm test"
   },
@@ -12,7 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "amazon-cognito-identity-js": "^4.6.0",
+    "aws-sdk-mock": "^5.1.0",
+    "bluebird": "^3.7.2",
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2",
     "moment": "^2.29.1",
-    "serverless-pseudo-parameters": "^2.5.0"
+    "nyc": "^15.1.0",
+    "proxyquire": "^2.1.3",
+    "serverless-pseudo-parameters": "^2.5.0",
+    "sinon": "^10.0.0"
   }
 }
