--- a/Users/package.json
+++ b/Users/package.json
@@ -7,11 +7,16 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --timeout 20000",
+    "testcoverage": "nyc mocha './*/*.test.js'",
+    "coverage": "nyc --reporter=lcov --reporter=text-lcov npm test"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk-mock": "^5.1.0",
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2",
     "serverless-pseudo-parameters": "^2.5.0"
   }
 }
